--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
+:root {
+  /* colors */
+  --red: hsl(0, 78%, 62%);
+  --cyan: hsl(180, 62%, 55%);
+  --orange: hsl(34, 97%, 64%);
+  --blue: hsl(212, 86%, 64%);
+
+  --very-dark-blue: hsl(234, 12%, 34%);
+  --grayish-blue: hsl(229, 6%, 66%);
+  --very-light-gray: hsl(0, 0%, 98%);
+
+  /* typography */
+  --font-size-body: 15px;
+  --font-family: 'Poppins', sans-serif;
+  --weight-light: 200;
+  --weight-regular: 400;
+  --weight-semi-bold: 600;
+}
+
 * {
-    margin: 0;
+  margin: 0;
+}
+
+body {
+    background-color: var(--very-light-gray);
+}
+
+.header__container {
+  font-family: var(--font-family);
+  color: var(--very-dark-blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.header__container--title {
+  font-weight: var(--weight-light);
+}
+
+.header__container--paragraph {
+  font-weight: var(--weight-light);
+  font-size: var(--font-size-body);
+  color: var(--grayish-blue);
+  margin: 15px 32%;
+  text-align: center;
 }
