Mobile design OK

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,66 @@ body {
   margin-bottom: 100px;
 }
 
+/* mobile design */
+@media (max-width: 375px) {
+  body{
+    width: 100vw;
+  }
+ 
+  .header__container--paragraph{
+    margin: 30px;
+  }
+  
+  .grid__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+  }
+
+  .container__cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    row-gap: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .container__cards--top{
+    grid-column: 1/1;
+    grid-row: 2/2;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .container__cards--right {
+    grid-column: 1/1;
+    grid-row: 4/4;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .container__cards--bottom {
+    grid-column: 1/1;
+    grid-row: 3/3;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .container__cards--left {
+    grid-column: 1/1;
+    grid-row: 1/1;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  footer {
+    display: none;
+  }
+
+}
+
 footer {
   position: fixed;
   bottom: 0;
